<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/actionToggleValues"
        android:title="@string/actionToggleValues" />
    <item
        android:id="@+id/actionToggleHighlight"
        android:title="@string/actionToggleHighlight" />
    <item
        android:id="@+id/actionTogglePinch"
        android:title="@string/actionTogglePinch" />
    <item
        android:id="@+id/actionToggleAutoScaleMinMax"
        android:title="@string/actionToggleAutoScaleMinMax" />
    <item
        android:id="@+id/actionToggleHighlightArrow"
        android:title="@string/actionToggleHighlightArrow" />
    <item
        android:id="@+id/animateX"
        android:title="@string/animateX" />
    <item
        android:id="@+id/animateY"
        android:title="@string/animateY" />
    <item
        android:id="@+id/animateXY"
        android:title="@string/animateXY" />
    <item
        android:id="@+id/actionSave"
        android:title="@string/actionSave" />

</menu>